# replicator

./: .gitignore  MIGRATION.md  Makefile  README.md  backup_s3_multipart.py  backup_s3_only_singlepart.py  check_multipart_drive.py  delete.py  delete_list.txt  mcps.config.yaml  pre_wipe_check.py  pyproject.toml  uploader.py
mcps/: __main__.py  cli.py  concurrency.py  credentials.py  doctor.py  drive_import.py  errors.py  hashing.py  logging_setup.py  reconciliation.py  redaction.py  replication.py  retry.py
mcps/catalog/: model.py  parser.py  printer.py
mcps/config/: model.py  parser.py  printer.py
mcps/duplicates/: detector.py  resolver.py
mcps/manifest/: model.py  parser.py  printer.py  writer.py
mcps/sources/: base.py  drive.py  fake.py  gcs.py  s3.py
tests/: conftest.py
tests/integration/: test_cold_start_listing_failure.py  test_cold_start_two_step.py  test_drive_adapter.py  test_full_run_apply.py  test_full_run_dry.py  test_gcs_adapter.py  test_inconsistency_detection.py  test_lock_stale_pid.py  test_s3_adapter.py
tests/smoke/: test_legacy_config_detected.py
tests/unit/: test_bounded_concurrency.py  test_canonical_survives.py  test_catalog_cache_lookup.py  test_catalog_model.py  test_catalog_roundtrip.py  test_cli_legacy_config.py  test_cli_smoke.py  test_concurrency.py  test_config_model.py  test_config_roundtrip.py  test_conflict_table.py  test_credentials.py  test_doctor.py  test_drive_adapter_unit.py  test_drive_importer.py  test_duplicate_detector.py  test_duplicate_resolver.py  test_errors.py  test_first_pass_safety.py  test_hashing.py  (+18 more)
(+4 files in other folders)
